--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,18 @@
 
 /* This is a comment! */
 /* CSS Syntax:
+
 selector {
   property: value;
   property: value;
 }
+
 */
 
 /* Type selector */
+
 p { /* select all <p> */
-  font-size: 1em; /* 16px, ?pt, 100%, 1em */
+  font-size: 16px; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
 
@@ -21,23 +24,22 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif;*/
-  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;;
-  color: rgba(130,41,37,1);
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
+  color: #777;
   text-align: right;
-  /*'Clicker Script', cursive;*/
 }
 
-/* Class selector (applied to as many elements as you like) */
+/* Class Selectors (applied to as many elements as you like) */
 
 .milk-text { /* select elements with class="milk-text" */
-  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  font:bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
   text-shadow: 0 2px 3px #000;
 }
 
 /* ID selector (apply to one unique element per page) */
 
-#logo { /* select elements with id="logo" */
+#logo { /* select elements with class="milk-text" */
   background: aqua;
 }
 
@@ -54,15 +56,23 @@ figcaption {
 /* Psuedo Selector */
 
 #details a:link, #details a:visited {
-  color: black;
+  color:black;
   text-decoration: none;
-} 
+}
 
 #details a:hover {
-  color: red;
+  color:black;
   text-decoration: underline;
 }
 
 #details a:active {
-  color: red;
+  color:red;
+  text-decoration: none;
 }
+
+
+
+
+
+
+
