--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ figcaption {
   font-family: "Clicker Script"; cursive;
 }
 
+#logo h2 { 
+  font-family: "Elsie Swash Caps"; cursive;
+}
+
+/* Pseudo Selector */
 #details a:link, #details a:visited {
   color: black; 
   text-decoration: none;
