--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(https://fonts.googleapis.com/css?family=Clicker+Script);
+
 /* This is a comment! */
 /* This
 is
@@ -15,7 +18,54 @@ selector {
 /* Type selector */
 
 p {
-  font-size: 16px; /* 16 px, ?pt, 100%, 1em, etc */
+  font-size: 1em; /* 16 px, ?pt, 100%, 1em, etc */
   line-height: 1.5em;
-  
+}
+
+figcaption {
+  /*font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, "New Times Roman", serif;*/
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
+  color: #777;
+  text-align: right;
+}
+
+/* Class selector (applied to as many elements as you like, even ones of different types) */
+
+.milk-text { /* will select any elements with class="milk-text" */
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
+
+/* ID selector (only apply to one unique element per page) */
+#logo { /* select elements with the id="logo" */
+  background: aqua;
+}
+
+/* Descendant Selector */
+#logo h1 { /* will only style h1s inside the element with id="logo" */
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Pseudo Class Selector */
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
 }
