--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(https://fonts.googleapis.com/css?family=Clicker+Script);
+
 /* This is a commet! */
 
 /* CSS Syntax:
@@ -18,7 +21,15 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif; */
-  font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
-  color: red;
+  font: normal 0.75em/1.5em Georgia, "Elsie Swash Caps", cursive;
+  color: #777;
   text-align: right;
+}
+
+/* Class selector (applied to as many elements as you like) */
+
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
 }
