--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
-
+@import url(https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(https://fonts.googleapis.com/css?family=Clicker+Script);
 /* comment */
 
 p {
   font-size: 1em;
   line-height: 1.5em;
+}
+
+figcaption {
+ /*  font-weight: normal;
+  font-size: .75em;
+  line-height: 1.5em;
+  font-family: Georgia, "New Times Roman", Serif; */
+  font: normal .75em/1.5em 'Elsie Swash Caps', cursive;
+  color: #777;
+  text-align: right;
+}
+
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
 }
