--- a/style.css
+++ b/style.css
@@ -22,3 +22,29 @@ figcaption {
   color: white;
   text-shadow: 0 2px 3px #000;
 }
+
+#logo {
+  background: aqua;
+}
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red
+}
