--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,35 @@ figcaption {
   color: white;
   text-shadow: 0 2px 3px #000;
 }
+
+/* ID selector (apply to one unique element per page) */
+
+#logo { /* select elements with id="logo" */
+  background-color: aqua;
+}
+
+/* Descendant Selector */
+
+#logo h1 { /* selects <h1> if inside the id="logo" */
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 { /* selects <h1> if inside the id="logo" */
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Pseudo Selector */
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+}
