--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
-@import 'https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900';
-@import 'https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps:400,900';
-/* This is a omment*/
+@import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(http://fonts.googleapis.com/css?family=Clicker+Script);
+
+/* This
+is
+a comment! */
 
 /* CSS Syntax:
 selector {
-property: value;
+  property: value;
+  property: value;
 }
 */
-/* Type Selector */
-p { /*select <p> */
+
+/* Type selector */
+
+p { /* select all <p> */
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -23,39 +29,42 @@ figcaption {
   text-align: right;
 }
 
-/* Class Selector (applied to as many elements as you like) */
+/* Class selector (applied to as many elements as you like) */
 
-.milk-text { /* select elements with a class="milk-text" */
+.milk-text { /* select elements with class="milk-text" */
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
-  text-shadow: 0 2px 3px #000000;
+  text-shadow: 0 2px 3px #000;
 }
 
-/* ID Selector (apply to one unique element per page) */
-#logo { /*select elements with id="logo" */
- background-color: aqua;
- }
+/* ID selector (apply to one unique element per page) */
 
- /* Descendent Selector */
- #logo h1 { /* selects <h1> if inside if="logo" */
- font-family: "Clicker Script", cursive;
+#logo { /* select elements with id="logo" */
+  background: aqua;
+}
+
+/* Descendent Selector */
+
+#logo h1 { /* selects <h1> if inside the id="logo" */
+  font-family: 'Clicker Script', cursive;
 }
 
 #logo h2 {
-font-family:'Elsie Swash Caps', cursive;
+  font-family: 'Elsie Swash Caps', cursive;
 }
 
-/* Psuedo Class Selectors */
-#details a:link  #details a:visited {
+/* Psuedo Selector */
+
+#details a:link, #details a:visited {
   color: black;
   text-decoration: none;
 }
 
-#details a: hover {
+#details a:hover {
   color: black;
   text-decoration: underline;
 }
 
-#details a: active {
+#details a:active {
   color: red;
 }
