--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps')
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script')
 /* This is a comment! */
 
 /* CSS Syntax:
@@ -15,8 +17,32 @@ p { /* select all <p> */
 }
 
 figcaption {
-  font-weight: normal;
+  /*font-weight: normal;
   font-size: 0.75em;
   line-height: 1.5em;
-  font-family: Georgia,"New Times Roman", serif;
+  font-family: Georgia,"New Times Roman", serif;*/
+  font: normal 0.75em/1.5em, 'Elsie Swash Caps', cursive;
+  color: #777;
+  text-align: right;
+}
+/* Class selector (applied to as many elements as you like) */
+
+.milk-text { /*select elements with class="milk-text" */
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  test-shadow: 0 2px 3px #000;
+}
+
+/* ID selector (apply to one unique element per page) */
+
+#logo { /* select class with id="logo" */
+background-color: aqua;
+}
+/*Descendent Selector */
+#logo h1 { /* select class with id="logo" */
+   font-family: 'Clicker Script', cursive;
+}
+/*Descendent Selector */
+#logo h2 { /* select class with id="logo" */
+  font-family: 'Elsie Swash Caps', cursive;
 }
