--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps')
-@import url('https://fonts.googleapis.com/css?family=Clicker+Script')
+
 /* This is a comment! */
+/* @import url('https://fonts.googleapis.com/css?family=Clicker+Script')
 
 /* CSS Syntax:
 selector {
