--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps')
-
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script')
 /* This is a comment! */
 /* @import url('https://fonts.googleapis.com/css?family=Clicker+Script')
 
@@ -40,10 +40,25 @@ figcaption {
 background-color: aqua;
 }
 /*Descendent Selector */
-#logo h1 { /* select class with id="logo" */
+#logo h1 { /* select <h1> if inside id="logo" */
    font-family: 'Clicker Script', cursive;
 }
 /*Descendent Selector */
-#logo h2 { /* select class with id="logo" */
+#logo h2 { /* select <h2> if inside id="logo" */
   font-family: 'Elsie Swash Caps', cursive;
+}
+
+/*Psuedo Selector */
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+  }
+
+#details a:hover {
+  color: black;
+  text-decoration:underline;
+}
+
+#details a:active {
+  color: red;
 }
