--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,29 @@ figcaption {
   color: white;
   text-shadow: 0 2px 3px black;
 }
+
+#logo {
+  background: aqua;
+}
+
+#logo h1 {
+  font-family: "Clicker Script", cursive;
+}
+
+#logo h2 {
+  font-family: "Elsie Swash Caps", cursive;
+}
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+}
