--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ figcaption {
 
 /* Pseudo Selector */
 
-#details a:link, #details a:visited { /* effects two selectors applying the save effects */
+#details a:link, #details a:visited { /* effects two selectors applying the same effects */
 	color: black;
 	text-decoration: none;
 }
