--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,10 @@ selector {
   }
 
   figcaption {
-    font-weight: normal;
-    font-size: 0.5em;
-    line-height: 10em;
-    font-family: Georgia, "New Times Roman", serif;
+
+    /*font-weight: normal;
+    font-size: 0.75em;
+    line-height: 1.5em;
+    font-family: Georgia, "New Times Roman", serif*/
+    font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
   }
