--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps:900');
 /* CSS Syntax:
 
 selector {
@@ -10,7 +11,7 @@ selector {
  /* Type selector */
 
  p { /* select all <p> */
-    font-size: 5em; /* in pixels 16px, points 7pt, 100% percentage relative to itself and parent elements, 1em is 16 pixels in most browsers */
+    font-size: 1em; /* in pixels 16px, points 7pt, 100% percentage relative to itself and parent elements, 1em is 16 pixels in most browsers */
     line-height: 1.5em;
   }
 
@@ -20,5 +21,51 @@ selector {
     font-size: 0.75em;
     line-height: 1.5em;
     font-family: Georgia, "New Times Roman", serif*/
-    font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
+    font: normal 0.75em/1.5em "Elsie Swash Caps", "New Times Roman", serif;
+    color: #777;
+    text-align: right;
   }
+
+
+  /* Class selector (applied to as many elements as you like) */
+
+.milk-text { /* select elements with class="milk-text" */
+    font: bold 2.6em 'Elsie Swash Caps', cursive;
+    color: white;
+    text-shadow: 0 2px 3px =000;
+  }
+
+
+  /* ID Selector (apply to one unique element per page) */
+
+#logo { /* select element with id="logo" */
+    background-color: aqua;
+  }
+
+
+/* Descendent Selector */
+
+#logo h1 { /*will only style h1's if they're inside the id="logo" */
+    font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 { /*will only stile h2's inside id="logo" */
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+
+/* Pseudo Selector */
+
+#details a:link a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+}
