--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,3 +19,36 @@ figcaption {
   color: white;
   text-shadow: 0 2px 3px #000;
 }
+
+/* ID selector */
+
+#logo {
+  background: aqua;
+}
+
+/* descendant selector */
+
+#logo h1 {
+  font-family: "Clicker Script", cursive;
+}
+
+#logo h2 {
+  font-family: "Elsie Swash Caps", cursive;
+}
+
+/* psuedo-class selectors */
+
+#details a:link, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+  text-decoration: underline;
+}
