--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,45 @@ figcaption {
   text-align: right;
 }
 
-/* Class selector (can be applied to as many elements as you like) */
+/* Class selector (can be applied to as many elements as you like per page) */
 
-.milk-text { /* Class selectors start with a period(.). This selector will select elements with
-  class=milk-text */
+.milk-text { /* Class selectors start with a period(.). This will select elements with class=milk-text */
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
   text-shadow: 0 2px 3px #000;   /* first number is horizontal offset, second number is vertical offset,
   third number is blur radius, and fourth number is color */
+}
 
+/* ID selector (only apply to one unique element per page) */
+
+#logo { /* ID selectors start with a hash or pound (#). This will select elements with id=logo */
+  background-color: aqua;
+}
+
+/* Descendent selector (this selects the descendents within a parent element) */
+
+#logo h1 { /* this selects the <h1> element inside the "id=logo" nested parent */
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Psuedo Class selector */
+
+#details a:link, #details a:visited { /* Descendent selector followed by Psuedo selector. Here we want to style the links within
+  the "details" section of our index.html page. You can also create a compound selector by separating them with a comma (,) to
+  affect the state of the link */
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
 }
