--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,30 @@ figcaption {
   color: white;
   text-shadow: 0 2px 3px #000;
 }
+
+/*ID Selector (apply to one unique element per page) */
+  #logo { /*Select elements with id="logo" */
+  background: aqua;
+  }
+
+  /* Descendent Selector */
+   #logo h1 { /* selects <h1> if inside the id="logo" */
+   font-family: 'Clicker Script', cursive;
+   }
+
+   #logo h2 {
+   font-family: 'Elsie Swash Caps', cursive;
+   }
+
+   /* Pseudo Selector */
+   #details a:link, #details a:visited {
+     color: black;
+     text-decoration: none;
+   }
+   #details a:hover {
+     color: black;
+     text-decoration: underline;
+   }
+   #details a:active {
+     color: red;
+    }
