--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
 /* This is a comment! */
-/* CSS Syntax: 
+/* CSS Syntax:
 selector {
   property:value;
   property:value;
@@ -12,11 +14,49 @@ p {/* select all <p> */
   line-height: 1.5em
 }
 
-figcaption { 
+figcaption {
 /* font-weight: normal;
 font-size: 0.75em;
 line-height: 1.5em;
 font-family: Georgia, "New Times Roman", serif; */
-font: normal 0.75em/1.5em Georgia
+font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
+color: #777;
+text-align: right;
 }
 
+/* Class selectors (applied to as many elements as you like) */
+.milk-text {/* select elements with class="milk=text"} */
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+
+}
+
+/* ID selector (apply to one unique element per page) */
+#logo { /* select elements with the id="logo"} */
+ background: aqua;
+}
+
+/* Descendent selector */
+#logo h1 { /* selects <h1> only inside id="logo" */
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Pseudo Selectors */
+#details a:link, #details a:visited  {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red; 
+}
