--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ p {
 
 figcaption {
   font-weight: normal;
-  font-size: 0.75em
+  font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif;
 }
