--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,9 @@ figcaption {
   color: rgba(171,46,28,1);
   text-align: right;
 }
+
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000
+}
