--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,8 @@ figcaption {
 #logo h2 {
   font-family: 'Elsie Swash Caps', cursive;
 }
+
+#details a:link #details a:visited {
+  color:black;
+  text-decoration: none;
+}
