--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,12 @@ figcaption {
   color:black;
   text-decoration: none;
 }
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color:red;
+}
