--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@ p { /* select all <p> */
 }
 
 figcaption {
-  font-weight: normal;
+  /*font-weight: normal;
   font-size: 0.75em;
   line-height: 1.5em;
-  font-family: Georgia, 'New Times Roman', serif;
+  font-family: Georgia, 'New Times Roman', serif; */
   font: normal 0.75em/1.5em font-family: 'Elsie Swash Caps';, cursive;
   color: #777;
   text-align: right;
