--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps:400,900');
 /* CSS Syntax:
 
 selector {
@@ -5,6 +7,8 @@ property: value;
 property: value;
 }
  */
+
+ /* Type selector */
  p { /* select all <p> */
    font-size: 1em; /* size of font, also = to 16px */
    line-height: 1.5em
@@ -15,7 +19,47 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", sans-serif; */
-  font: normal 0.75em/1.5em Georgia, "New Times Roman", sans-serif;
-  color: #830e15; 
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive, "New Times Roman", sans-serif;
+  color: #777;
   text-align: right;
+}
+
+/* Class selector (applied to as many elements as you like)*/
+
+.milk-text { /* select elements with calss="milk-text"*/
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000
+}
+
+/* ID selector (apply to one unique element per page) */
+
+#logo { /* select elements with id="logo"*/
+  background: aqua;
+}
+
+/* Descendent selector*/
+
+#logo h1 { /* selects <h1> if inside the id="logo"*/
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Psuedo Selector*/
+
+#details a:link, #details a:visited  {
+  color: black;
+  text-decoration: none
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red
 }
