added comments for using google fonts

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Saira+Extra+Condensed');
+/* add in CSS rules: font-family: 'Saira Extra Condensed', sans-serif;      */
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+/* add in CSS rules - font-family: 'Raleway', sans-serif; */
 
 
 
