--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,5 +30,10 @@ figcaption {
 
 .nosifer-text {
   font: bold 3.7em 'Nosifer', cursive;
-  color: rgba(14,53,7);
+  color: rgba(14,53,7, 1);
+}
+
+#logo {
+  font: bold 3.5em 'Fascinate Inline', cursive;
+  color: rgba(138,	33,	67,	1)
 }
