--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+
 /* this is a comment!  */
 /* CSS syntax
 
@@ -7,7 +10,56 @@ property: value;
 }*/
 
 p {
-  font-size: 2em;
+  font-size: 1em;
   line-height: 1.5em;
+  }
+
+  figcaption {
+    /* font-weight: normal;
+    font-size: 0.75em;
+    line-height: 1.5em;
+    font-family: Georgia, "New Times Roman", serif; */
+
+    font: normal 0.75em/1.5em "Elsie Swash Caps", cursive;
+    color: rgba(185,	38,	39, 1)	;
+    text-align: right;
+  }
+
+  /* Class Selectors (applied to as many elements as you like)*/
+
+  .milk-text {
+    font: bold 2.6em 'Elsie Swash Caps', cursive;
+    color: white;
+    text-shadow: 0 2px 3px #000;
+  }
+
+/* ID selector (apply to one unique element per page)*/
+#logo {
+  background: aqua;
+}
+
+/* Descendent Selector*/
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Pseudo Selector*/
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
   color: red;
 }
