--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,28 @@ figcaption {
 #logo {
   background-color: aqua;
 }
+
+/* descendant selector */
+#logo h1 {
+  font-family: "Click Script", cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* pseudo selector */
+#details a:link, #details a:visited{
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+  text-decoration: underline;
+}
