--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 <style>
-@import url('https://fonts.googleapis.com/css?family=Elsie:400,900');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps');
 </style>
+
 
 /* This is a comment */
 
