--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,10 @@ p { /* select all  <p> */
     font-size: 48px; /* 16px, ?pt, 100%, 1em */
     line-height: 1.5em;
 }
+
+figcaption {
+    font-weight: normal;
+    font-size: 0.75em;
+    line-height: 1.5em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
