--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ figcaption {
 
 /* Pseudo Class Selectors */
 
-#details a: link, #details a: vistited {
+#details a: link, #details a: visited {
   color: black;
   text-decoration: none;
 }
@@ -64,5 +64,5 @@ figcaption {
 }
 
 #details a:active {
-  color: red; 
+  color: red;
 }
