--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+
 /* This is a comment */
 
 
@@ -8,3 +11,62 @@ selector{
   property: value;
 }
 */
+
+/* Type Selector */
+p { /*select all <p> elements*/
+font-size: 1em; /*16px, 16pt, 100%, 1em*/
+line-height: 1.5em;
+}
+
+figcaption{
+  /*font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, "New Times Roman", serif;*/
+  font: normal 0.75em/1.5em 'Elsie Swash CapS', cursive;
+  color: #777;
+  text-align: right;
+}
+
+/* Class selector (applied to as many elements as you like)*/
+
+.milk-text { /*Select elements with class 'milk-text'*/
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
+
+/*ID Selector - only 1 per page*/
+
+#logo { /*Selects elements with ID='logo'*/
+  background: aqua;
+}
+
+/*Descendent Selector */
+
+#logo h1 { /*Only style h1 if they are inside id="logo"*/
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2{
+  font-family: 'Elsie Swash Caps', cursive
+}
+
+/*Pseudo Selectors*/
+
+#details a:link, #details a:visited  { /*details is the descendent selector, a:link is link (pseudeo) selector*/
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover{ /*pseudo class 'hover'*/
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active{ /*pseudo class 'active'*/
+  color: red;
+}
+
+
+
