--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css?family=Clicker Script|Elsie+Swash+Caps: 400,500');
 @import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps: 400, 500');
 /*CSS syntax selector {
@@ -56,3 +57,75 @@ p { /*  will select all p */
  #details a:active {
    color:red;
  }
+=======
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps|cursive: 400, 500');
+
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps|cursive: 400, 500');
+
+/* This
+is 
+a comment! */
+
+/* CSS Syntax:
+
+selector {
+  property: value;
+  property: value;
+}
+
+*/
+
+/* Type Selector */
+
+p {/*Select all <p>*/
+  font-size: 16px; /* 16px, 7pt, 100%, 1em */
+  line-height: 1.5em
+}
+
+figcaption {
+  /* font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, "New Times Roman", serif;*/
+  font: normal 0.75em/1.5em "Elsie Swash Caps", cursive, serif;
+  color: #777;
+  text-align: right
+}
+  
+/* Class selector (applied to as many elements as you like)*/
+
+.milk-text {/* select elements with class="milk-text" */
+  font: bold 2.6em "Elsie Swash Caps", cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
+
+/* ID selector (apply to one unique element per page) */
+#logo { /* select elements with id="logo" */
+  background: aqua;
+}
+
+/* Descendent selector */
+#logo h1 { /* selects <h1> if inside the id="logo" */
+  font-family: "Clicker Script", cursive;
+}
+
+#logo h2 {
+  font-family: "Elsie Swash Caps", cursive;
+  
+}
+
+/* Pseudo Class Selectors */
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+}
