--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ p { /*select all <p>*/
   background-color: aqua;
 }
 
-/* Descendent Selectpr */
+/* Descendent Selector */
 
 #logo h1 { /* selects <h1> if inside the id="logo" */
   font-family: 'Clicker Script', cursive;
