--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,14 @@ figcaption {
 #logo h2 {
   font-family: 'Elsie Swash Caps', cursive;
 }
-#details a:link{
+#details a:link, #details a:hover{
   color: black;
   text-decoration: none;
 }
-#details a:hover{
+/*#details a:hover{
   color: red;
   text-decoration: underline;
-}
+}*/
 #details a:visited{
   color: red;
   text-decoration: underline;
