--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,9 @@ text-shadow: 0 2px 3px #000;
 #logo { /* select elements with id= "logo" */
   background: aqua;
 }
+
+/* Descendents Selector */
+
+#logo h1 { /* selects <h1> if inside the id="logo" */
+  font-family: "Clicker Script", cursive;
+}
