--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,10 @@ text-shadow: 0 2px 3px #000;
 #logo h2 {
   font-family: "Elise Swash Caps", cursive;
 }
+
+/* Pseudo Selector */
+
+#details a:link {
+  colof: black;
+  text-decoration: none;
+}
