--- a/css/style.css
+++ b/css/style.css
@@ -58,17 +58,13 @@ text-shadow: 0 2px 3px #000;
 
 /* Pseudo Selector */
 
-#details a:link {
-  colof: black;
-  text-decoration: none;
-}
-
 #details a:link #details a:visited {
-  colof: black;
+  color: black;
   text-decoration: none;
 }
 
-#details a:hover {
-  colof: black;
+#details a:active {
+  colof: re;
   text-decoration: underline;
 }
+
