--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ figcapp {
   background-color: aqua;
 }
 
-#logo hi {
+#logo h1 {
   font-family: "Clicker Script", cursive;
 }
 
-@logo h2 {
+#logo h2 {
   font-family: "Elsie Swash Caps", cursive;
 }
 
