--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,39 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif;*/
-  font: normal, 0.75em/1.5em,  'Elsie Swash Caps', cursive;
+  font: normal 0.75em/1.5em  'Elsie Swash Caps', cursive;
   color: #09af3b;
   text-align: right;
+}
+
+.milk-text {
+  font: bold 2.6em 'Clicker Script', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
+
+#logo {
+  background: aqua;
+}
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+#details a:links, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
 }
