--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,42 @@ figcaption {
   text-align: right;
 }
 
+/* Class selectors */
+
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: #FFFFFF;
+  text-shadow: 0 2px 3px #000;
+}
+
+/* ID selectors */
+
+#logo {
+  background: aqua;
+}
+
+/* Descendant selectors */
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Pseudo selectors */
+
+#details a:link, #details a:visited {
+  color: #000000;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: #000000;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: #FF0000;
+}
