--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+
+
 /* This is a comment! */
 
 /* CSS Syntax:
@@ -10,7 +14,39 @@ selector{
 
 /* Type selector */
 
-p{ /* selects all <p> */
-  font-size: 16em; /* can be sent as px, pt, %, or em */
+p { /* selects all <p> */
+  font-size: 1em; /* can be sent as px, pt, %, or em */
   line-height: 1.5em;
 }
+
+figcaption {
+  /*font-weight: normal;*/
+  /*font-size:; 0.75em;*/
+  /*line-height: 1.5em;*/
+  /*font-family: Georgia, "New Times Roman", serif;*/
+  font: normal 0.75em/1.5em "Elsie Swash Caps", cursive;
+  color: #777;
+  text-align: left;
+}
+
+/* Class selector (applied to as many elements as you like) */
+
+.milk-text{ /* will select elements with class 'milk-text' */
+  font: bold 2.6em "Elsie Swash Caps", cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
+
+/* ID selector (can only apply to one unique element per page*/
+
+#logo { /*select elements with id="logo" */"
+  background: aqua;
+}
+
+/* Descendent Selector */
+
+
+
+
+
+
