--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,32 @@ figcaption {
 
 /* ID selector (can only apply to one unique element per page*/
 
-#logo { /*select elements with id="logo" */"
+#logo { /*select elements with id="logo" */
   background: aqua;
 }
 
 /* Descendent Selector */
 
+#logo h1{ /* selects <h1> if they're inside the id="logo" */
+  font-family: "Clicker Script", cursive;
+}
 
+#logo h2 {
+  font-family: "Elsie Swash Caps", cursive;
+}
 
+/* Psuedo Selector */
 
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
 
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
 
+#details a:active {
+  color: red;
+}
