--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* This is a comment */
 @import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps');
 
 p {font-size: 1em; 
   line-height: 1.5em;}
@@ -8,7 +9,13 @@ p {font-size: 1em;
     font-weight: normal;
     font-size: 0.75em;
     line-height: 1.5em;
-    font-family: Georgia, "New Times New Roman", serif;
+    font-family: Georgia, "Elsie Swash Caps", cursive, serif;
     color: #777;
     text-align: right;
+}
+
+.mild-text {
+  font: bold 2.6em "Elsie Swash Caps", cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
 }
